syntax = "proto3";

option csharp_namespace = "GrpcHelper.WorkerService";
import "google/protobuf/empty.proto";

package worker;

service WorkerService {
    rpc GetWorkers(google.protobuf.Empty) returns (WorkerModel);
    rpc RestartWorkers(google.protobuf.Empty) returns (Status);
    rpc RestartWorker(WorkerRestart) returns (Status);
}

message Work {
    string Group = 4;
    int32 TaskId = 5;
    string SettingsId = 6;
}

message Worker {
    repeated Work Works = 1;
    string WorkerName = 2;
}

message WorkerRestart {
    int32 TaskId = 1;
    string SettingsId = 2;
}

message WorkerModel {
    repeated Worker Workers = 1;
}

message Status {
  bool success = 1;
}
